--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,195 @@
 body{
-    font-family: 'Courier New', Courier, monospace;
+  font-family: "Poppins", sans-serif;
 }
+
+
+/* ENCABEZADO IMAGEN DE FONDO */
+
+.site-blocks-cover {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-position: center center; }
+  .site-blocks-cover.overlay {
+    position: relative; }
+    .site-blocks-cover.overlay:before {
+      position: absolute;
+      content: "";
+      left: 0;
+      bottom: 0;
+      right: 0;
+      top: 0;
+      background: rgba(0, 0, 0, 0.4); }
+  .site-blocks-cover .player {
+    position: absolute;
+    bottom: -250px;
+    width: 100%; }
+  .site-blocks-cover, .site-blocks-cover .row {
+    min-height: 600px;
+    height: calc(100vh); }
+  .site-blocks-cover h2, .site-blocks-cover h3, .site-blocks-cover h4, .site-blocks-cover h5 {
+    color: #ffffff; }
+  .site-blocks-cover h1 {
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 1;
+    opacity: 1;
+    transform: translate(0); 
+  }
+    @media (min-width: 768px) {
+      .site-blocks-cover h1 {
+        font-size: 50px;
+        opacity: 1;
+        transform: translate(0);
+        } 
+      }
+  .site-blocks-cover p {
+    color: #ffffff;
+    font-size: 1.2rem;
+    line-height: 1.5; }
+
+
+.logo {
+  font-size: 24px;
+  color: #b92020;
+  font-weight: 700;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  margin-top: -4px;
+  line-height: 40px;
+  text-align: center;
+  border: 1px solid #3aac6c;
+  @media (max-width: 991.98px){
+    .logo {
+      align-items: center;
+    }
+}
+  .logo:hover {
+    color: #000000;
+  }
+}
+
+.section-heading h2 {
+  font-size: 3rem; }
+  @media (max-width: 991.98px) {
+.section-heading h2 {
+    font-size: 2rem;
+  } 
+  }
+
+.skill h3 {
+  font-size: 18px; 
+}
+
+.progress {
+  overflow: visible;
+  margin-bottom: 26px;
+  height: 4px; 
+}
+.progress .progress-bar {
+  background-color: #96bb7c;
+  position: relative;
+  border-radius: 4px;
+  overflow: visible; 
+}
+.progress .progress-bar span {
+  background-color: #96bb7c;
+  position: absolute;
+  bottom: -20px;
+  font-size: 10px;
+  line-height: 10px;
+  padding: 2px 3px 2px 4px;
+  right: -1.4em;
+  border-radius: 2px; 
+}
+.progress .progress-bar span::after {
+  bottom: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom-color: #96bb7c;
+  border-width: 5px;
+  margin-left: -5px; 
+}
+
+/* SECCCION EXPERIENCIA */
+
+.work {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #efefef; }
+  .work h4 {
+    font-size: 18px; }
+  .work .resume-meta {
+    font-size: 14px;
+    vertical-align: middle; }
+    .work .resume-meta .icon {
+      margin-right: 10px;
+      color: #ccc; }
+  .work .period {
+    margin-bottom: 7px; }
+    .work .period > span {
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 700;
+      letter-spacing: .1rem;
+      padding: 7px 20px;
+      border-radius: 30px;
+      background: rgba(150, 187, 124, 0.1);
+      color: #96bb7c; }
+
+/* PIE DE PAGINA FOOTER */
+.footer-site {
+  background: #efefef;
+  font-size: 14px;
+  color: #888;
+  padding: 70px 0; }
+  .footer-site a {
+    color: #96bb7c;
+    position: relative;
+    display: inline-block; }
+  .footer-site .btn:before {
+    display: none; }
+  .footer-site .widget {
+    margin-bottom: 40px;
+    display: block;
+    position: relative;
+    z-index: 1; }
+    .footer-site .widget h3 {
+      font-size: 16px;
+      color: #000000;
+      margin-bottom: 30px; }
+    .footer-site .widget .links {
+      width: 150px; }
+      .footer-site .widget .links li {
+        margin-bottom: 10px; }
+        .footer-site .widget .links li a {
+          color: #777; }
+  .footer-site .social li {
+    display: inline-block; }
+    .footer-site .social li a {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      position: relative;
+      background: #777;
+      border-radius: 50%;
+      color: #ffffff; }
+      .footer-site .social li a:before {
+        display: none; }
+      .footer-site .social li a > span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%); }
+      .footer-site .social li a:hover {
+        background: #b1cc9e;
+        color: #ffffff; }
