--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ body{
       bottom: 0;
       right: 0;
       top: 0;
-      background: rgba(0, 0, 0, 0.4); }
+      background: rgba(0, 0, 0, 0.4); 
+    }
   .site-blocks-cover .player {
     position: absolute;
     bottom: -250px;
